# libviso2-mirror

./: CMakeLists.txt
matlab/: demo_matching_quad.m  plotMatch.m  visualOdometryStereoMex.cpp  vo_rewrite.m
src/: viso.h  viso_stereo.cpp  viso_stereo.h
